@@ -1390,19 +1390,34 @@ $(document).ready(function() {
 
     
     $('select[id^="plug_sensor"]').change(function () {
+        //Récupération du numéro de la prise en cours d'édition. L'information est contenue dans l'id de l'élément, on découpe donc l'id pour récupérer l'information
         var plug = $(this).attr('id').substring(11,12);
-        var check=false;
+        var nb_sensor=0;
+
+        //sensors: variable globale du nombre de capteurs définit par le fichier config.php
         if(sensors) {
             for (var i = 1  ; i<=sensors; i++) {
                 if($("#plug_sensor"+plug+i+" option:selected").val()=="True") {
-                    check=true;
+                    //Compte du nombre de capteur selectionné:
+                    nb_sensor=nb_sensor+1;
                 }
             }
 
-            if(!check) {
+            if(nb_sensor==0) {
+               // Si aucun capteur n'est selectionné: affichage du message précisant que le capteur 1 sera selectionné + selection automatique du capteur 1
                $("#error_select_sensor"+plug).show();
+               $("#plug_sensor"+plug+"1 option[value='True']").prop('selected', 'selected');
             } else {
+               // On efface le message d'erreur sinon
                $("#error_select_sensor"+plug).css("display","none");
+            }
+
+            if(nb_sensor==1) {
+                // Si un seul capteur pour la régulation, on désactive les options de min/max/moy:
+                $("#plug_compute_method"+plug).attr('disabled','disabled');
+            } else {
+                // Sinon les options sont activées:
+                $("#plug_compute_method"+plug).removeAttr('disabled');
             }
         }
     });
